# kia-live-serverside

./: .gitignore  README.MD  commands.txt  main.py  old.py  pyproject.toml  routes_children_ids.json  test.py
in/: client_stops.json  routelines.json  routes_children_ids.json  routes_parent_ids.json  start_times.json
in/helpers/construct_stops/: client_stops.json
in/helpers/construct_stops/api_responses/: KIA-10 DOWN.json  KIA-10 UP.json  KIA-14 UP.json  KIA-15 UP.json  KIA-15A DOWN.json  KIA-17 DOWN.json  KIA-17 UP.json  KIA-18 DOWN.json  KIA-18 UP.json  KIA-4 UP.json  KIA-4A DOWN.json  KIA-4A UP.json  KIA-5 UP.json  KIA-5D UP.json  KIA-6 DOWN.json  KIA-6A DOWN.json  KIA-6A UP.json  KIA-7 UP.json  KIA-7A DOWN.json  KIA-8 DOWN.json  KIA-8A DOWN.json  KIA-8A UP.json  KIA-8C DOWN.json  KIA-8C UP.json  KIA-8D DOWN.json  KIA-8D UP.json  KIA-8E UP.json  KIA-8EW DOWN.json  KIA-9 UP.json  KIA-9H DOWN.json  KIA-9H UP.json
src/: main.py
src/live_data_service/: feed_entity_updater.py  live_data_getter.py  live_data_receiver.py  live_data_scheduler.py  live_data_service.py  live_data_transformer.py
src/local_file_service/: gtfs_builder.py  local_file_service.py
src/shared/: __init__.py  config.py  db.py  new_client_stops.py  test_insert.py  timings_tsv.py  utils.py
src/tests/: test_gtfs_builder.py  test_live_1.py  test_live_2.py  test_utils.py  test_zip_utils.py
src/web_service/: __init__.py
