[tool.poetry]
name = "kia-live-update-service"
version = "0.1.0"
description = ""
authors = ["Aayush Rai <aayushrai0911@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
#boto3 = "^1.35.74"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

