[tool.poetry]
name = "kia-live-update-service"
version = "0.1.0"
description = ""
authors = ["Aayush Rai <aayushrai0911@gmail.com>"]
readme = "README.md"
package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
#boto3 = "^1.35.74"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
flask = "^3.1.0"
pytest = "^8.3.5"
polyline = "^2.0.2"
google = "^3.0.0"
gtfs-realtime-bindings = "^1.0.0"
pytz = "^2025.2"
aiohttp = "^3.11.16"
pytest-asyncio = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

